--- a/css/style.css
+++ b/css/style.css
@@ -57,21 +57,54 @@ ul{
     font-size: 36px;
     font-weight: 800;
     color: #1f2937;
+    text-align: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
-blockquote{
+.deck{
+    display: flex;
+    justify-content: center;
+    gap: 5%;
+}
+
+.cards{
+    width: 200px;
+    text-align: center;
+}
+
+.quote{
     background-color: #e5e7eb;
     font-size: 36px;
     color: #1f2937;
-    font-style: light italic;
+    font-style: italic;
+    font-weight: 100;
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    margin-top:10%;
 }
-
+span{
+    align-self: flex-end;
+    font-weight: 800;
+}
 .action{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10%;
+}
+.blue{
     background-color:#3882f6;
+    width:80%;
+    padding: 16px;
+    display: flex;
+    
 }
 
 .footer{
     background-color: #1f2937;
     font-size: 18px;
     color: #e5e7eb;
+    text-align: center;
 }
